<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>swissbudget</artifactId>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-dependency-plugin</artifactId>
        <executions>
          <execution>
            <id>copy-libs</id>
          </execution>
        </executions>
        <groupId>org.apache.maven.plugins</groupId>
      </plugin>
      <plugin>
        <artifactId>jandex-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>make-index</id>
          </execution>
        </executions>
        <groupId>io.smallrye</groupId>
      </plugin>

      <plugin>
        <artifactId>generator</artifactId>
        <configuration>
          <dbConfigPath>
            src/main/resources/META-INF/microprofile-config.properties
          </dbConfigPath>
        </configuration>
        <groupId>ch.michu.tech.jooq</groupId>
        <version>1.0.0</version>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <!--    Helidon -->
    <dependency>
      <artifactId>helidon-microprofile-core</artifactId>
      <groupId>io.helidon.microprofile.bundles</groupId>
    </dependency>
    <dependency>
      <artifactId>helidon-microprofile-config</artifactId>
      <groupId>io.helidon.microprofile.config</groupId>
    </dependency>
    <dependency>
      <artifactId>helidon-microprofile-scheduling</artifactId>
      <groupId>io.helidon.microprofile.scheduling</groupId>
    </dependency>
    <dependency>
      <artifactId>jakarta.json.bind-api</artifactId>
      <groupId>jakarta.json.bind</groupId>
    </dependency>
    <dependency>
      <artifactId>jersey-media-json-binding</artifactId>
      <groupId>org.glassfish.jersey.media</groupId>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <artifactId>jandex</artifactId>
      <groupId>io.smallrye</groupId>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <artifactId>jakarta.activation-api</artifactId>
      <groupId>jakarta.activation</groupId>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <artifactId>helidon-logging-jul</artifactId>
      <groupId>io.helidon.logging</groupId>
      <scope>runtime</scope>
    </dependency>

    <!--    Custom -->
    <dependency>
      <artifactId>jooq</artifactId>
      <groupId>org.jooq</groupId>
      <version>${jooq.version}</version>
    </dependency>
    <dependency>
      <artifactId>jooq-meta</artifactId>
      <groupId>org.jooq</groupId>
      <version>${jooq.version}</version>
    </dependency>
    <dependency>
      <artifactId>postgresql</artifactId>
      <groupId>org.postgresql</groupId>
      <version>${postgres.version}</version>
    </dependency>
    <dependency>
      <artifactId>lombok</artifactId>
      <groupId>org.projectlombok</groupId>
      <scope>provided</scope>
      <version>1.18.30</version>
    </dependency>
    <dependency>
      <artifactId>generator</artifactId>
      <groupId>ch.michu.tech.jooq</groupId>
      <version>0.0.1-SNAPSHOT</version>
    </dependency>
    <dependency>
      <artifactId>javax.mail</artifactId>
      <groupId>com.sun.mail</groupId>
      <version>1.6.2</version>
    </dependency>
    <dependency>
      <artifactId>commons-validator</artifactId>
      <groupId>commons-validator</groupId>
      <version>1.8.0</version>
    </dependency>
    <dependency>
      <artifactId>jjwt</artifactId>
      <groupId>io.jsonwebtoken</groupId>
      <version>0.9.1</version>
    </dependency>
    <dependency>
      <artifactId>jaxb-api</artifactId>
      <groupId>javax.xml.bind</groupId>
      <version>2.3.1</version>
    </dependency>
    <dependency>
      <artifactId>activation</artifactId>
      <groupId>javax.activation</groupId>
      <version>1.1.1</version>
    </dependency>

    <!--    Test -->
    <dependency>
      <artifactId>junit-jupiter-api</artifactId>
      <groupId>org.junit.jupiter</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>helidon-microprofile-testing-junit5</artifactId>
      <groupId>io.helidon.microprofile.testing</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>hamcrest-all</artifactId>
      <groupId>org.hamcrest</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>mockito-core</artifactId>
      <groupId>org.mockito</groupId>
      <scope>test</scope>
      <version>5.8.0</version>
    </dependency>
    <dependency>
      <artifactId>h2</artifactId>
      <groupId>com.h2database</groupId>
      <scope>test</scope>
      <version>2.2.224</version>
    </dependency>
    <dependency>
      <artifactId>json</artifactId>
      <groupId>org.json</groupId>
      <scope>test</scope>
      <version>20231013</version>
    </dependency>
  </dependencies>

  <groupId>ch.michu.tech</groupId>
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <artifactId>helidon-mp</artifactId>
    <groupId>io.helidon.applications</groupId>
    <relativePath/>
    <version>4.0.1</version>
  </parent>

  <properties>
    <java.version>21</java.version>
    <jooq.version>3.18.7</jooq.version>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <postgres.version>42.4.0</postgres.version>
  </properties>

  <version>0.0.1-SNAPSHOT</version>
</project>
